@@ -5,6 +5,8 @@ xymon (4.3.25) stable; urgency=high
 
    * Fix "TRENDS" entries in hosts.cfg improperly handling partial matches with 
      other graph names (Reported by Jeremy Laidman) 
+   * A possible crash in when loading confreport.cgi has been fixed
+     (Thanks, Axel Beckert)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  Mon, XX Dec 2015 17:40:00 -0800
 
